--- a/public/css/home.css
+++ b/public/css/home.css
@@ -79,3 +79,12 @@ img {
     bottom: 0;
     width:100%;
 }
+.card-title{
+    font-weight: bold;
+    text-align: center;
+    line-height: 1.78em;
+}
+.stars{
+    text-align: center;
+}
+
