--- a/public/css/login.css
+++ b/public/css/login.css
@@ -86,3 +86,9 @@
         .links a{
         margin-left: 4px;
         }
+
+        .register{
+            font-size: 18px;
+            font-weight: bold;
+
+        }
