--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,17 +4,17 @@
     font-weight: bold;
 }
 .button{
-    position: relative;
-    float: right;
-    margin-right:40px;
-    margin-top:-65px;
-    height: 40px;
+    float:right;
+    position:relative;
+    margin-top:-60px;
+    color:white;
+    margin-right:-260px;
     color:white;
     font-weight: bold;
 }
 .logo{
     position: relative;
-    /* margin-top:-15px; */
+    margin-top:-10px;
 }
 .grid-container {
       display: inline-grid;
@@ -30,11 +30,12 @@
    position: relative;
    float: right;
    top:-20px;
-   margin-right: 180px;
-   margin-top:-50px;
+   margin-right: 280px;
+   margin-top:-45px;
    background-color: none;
    width: 100px;;
 }
+
 .img_cart{
   width:50px;
   height:35px;
@@ -87,4 +88,37 @@ img {
 .stars{
     text-align: center;
 }
+.register{
+    position: relative;
+    float:right;
+    margin-top:-60px;
+    font-weight: bold;
+    color:white;
+    right:-200px;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+}
+
+a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.previous {
+    background-color: #f1f1f1;
+    color: black;
+    margin-left:470px;
+    margin-bottom: 20px;
+}
+
+.next {
+    background-color: orange;
+    color: white;
+
+}
+
 
